--- a/guide.tex
+++ b/guide.tex
@@ -12,17 +12,87 @@
 \author{Edward D Lee, Bryan C Daniels, Colin Twomey, Colin Clement}
 %\date{}                                           % Activate to display a given date or no date
 
+\newcommand{\br}[1]{\left<#1\right>}
+\newcommand{\si}[0]{\sigma_{\rm i}}
+\newcommand{\sj}[0]{\sigma_{\rm j}}
+
 \begin{document}
 \begin{abstract}
-CONIII is a project for providing an interface to various algorithms for solving the inverse maximum entropy problem. In this guide, we provide details sufficient for graduate students who are new to this area to understand how the algorithms work and plug-and-play code to run them on their data sets. We hope that this interface will provide the means for maximum entropy modeling techniques to become more widespread and provide a platform for organizing the various techniques into a convenient environment.
+CONIII is a project for providing a simple interface to various algorithms for solving the inverse maximum entropy problem. In this guide, we provide details sufficient for graduate students who are new to this area to understand how the algorithms work and plug-and-play code to run them on their data sets. We hope that this interface will provide the means for maximum entropy modeling techniques to become more widespread and provide a platform for organizing the various techniques into a convenient environment.
 \end{abstract}
 
 \maketitle
 
 \section{Introduction}
-Recently, with the advent of numerical, analytic, and computation tools, the inverse problem in statistical physics has become widely used in a variety of areas. The typical problem in statistical physics involves postulating the Hamiltonian and working out the physical behavior of the system, but the \textit{inverse} problem consists of finding the parameters that correspond to observed behavior of a known system. In many cases, this is a very difficult problem to solve and does not have an analytical solution, and we must rely on analytic approximation or numerical cum computational techniques to find the corresponding parameters.
+Recently, with the advent of numerical, analytic, and computation tools, the inverse problem in statistical physics has become widely used in a variety of areas including biology, social physics, and dynamical systems. The typical problem in statistical physics involves postulating the Hamiltonian and working out the physical behavior of the system, but the \textit{inverse} problem consists of finding the parameters that correspond to observed behavior of a known system. In many cases, this is a very difficult problem to solve and does not have an analytical solution, and we must rely on analytic approximation or numerical cum computational techniques to estimate the parameters.
 
-The inverse problem can be derived from a maximum entropy principle. The idea behind maximum entropy, or maxent, is to build a model that is consistent with the data but otherwise as structureless as possible.
+We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level. With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
+
+\section{Why maximum entropy?}
+One form of the inverse problem is can be derived from a maximum entropy principle. The idea behind maximum entropy, or maxent, is to build a model that is consistent with the data but otherwise as structureless as possible. Maximizing the entropy $S[p] = -\sum p_i \log p_i$ while fitting $K$ constraints $\sum_k p_i f_k(\sigma_i)$ can be solved by the method of Langrangian multipliers
+\begin{align}
+	-\ln Z &= -\sum_i p_i\log p_i - \sum_k \lambda_k \sum_i p_i f_k(\sigma_i)\\
+	F &= S - \br{E}
+\end{align}
+The notation draw out the equivalence between maximizing entropy and minimizing the Helmholtz free energy of system. By specifying the constraints on the maximization, we fix the form of the Hamiltonian. This formulation makes clear the fundamental connection between the maximum entropy principle and statistical mechanics \cite{Jaynes}.
+
+The resulting model is a Boltzmann distribution over states
+\begin{align}
+	p(\sigma) &= e^{-E(\sigma)}/Z\\
+	Z &= \sum_\sigma e^{-E(\sigma)}
+\end{align}
+
+A well known example is that of the Ising model with binary spins $\sigma_{\rm i} \in {-1,1}$ with Hamiltonian 
+\begin{align}
+	E &= -\sum_{\br{\rm ij}} J_{\rm ij}\si\sj -\sum_{\rm i=1}^N h_i\si
+\end{align}
+with couplings $J_{\rm ij}$ between neighbors and external fields specific to each spin $h_{\rm i}$. The Ising model can be obtained from insisting that the magnetizations and pairwise correlations of the model match those observed in the data
+\begin{align}
+	\br{\si}_{\rm obs} &= \br{\si}\\
+	\br{\si\sj}_{\rm obs} &= \br{\si\sj}
+\end{align}
+
+Enforcing the constraints is equivalent to minimizing the Kullback-Leibler divergence between the model and the data
+\begin{align}
+	D_{KL}(p||q) &= \sum p_k \log\left(\frac{p_k}{q_k}\right)\\
+	\frac{\partial D}{\partial \lambda_k} &= p_k \frac{\partial (-E-Z)}{\partial \lambda_k}\\
+	0 &= \br{f_k}_{\rm obs} -\br{f_k}
+\end{align}
+[Of course, we also have to show that the problem is convex.]
+
+\section{Mean-field methods}
+Analytic approximations simplify the equations to an extent where they are tractable.
+
+\section{Monte Carlo methods}
+Perhaps the most direct route to solving these equations is to use Monte Carlo sampling to approximate the distribution and guess how to adjust the parameters appropriately. This can be combined with a variety of more sophisticated stochastic gradient descent ideas to solve the problem.
+
+\subsection{Monte Carlo histogram}
+Since the sampling step is expensive, could we reuse a sample for more than one gradient descent step? This is the idea behind Monte Carlo histogram. Instead of sampling every time we change the parameters, we can make a good prediction of how the distribution will change \textit{if} we modify the parameters slightly. Given that we have a sample,
+\begin{align}
+	q(\sigma) &= \frac{q(\sigma)}{p(\sigma)}p(\sigma)\\
+		&= \frac{Z'}{Z}e^{\epsilon\sum_k \lambda_k \epsilon f_k} p\\
+\intertext{but we have a sampled approximation to $p$. By summing over all states}
+	\br{f_k}' &= \frac{Z'}{Z} \br{e^{\epsilon\sum_k \lambda_k f_k} f_k}_{\rm obs}
+\end{align}
+
+\section{Pseudolikelihood}
+
+\section{Minimum Probability Flow}
+
+\section{Cluster expansions}
+
+\section{Bethe/Kikuchi free energy}
+
+\section{CONIII}
+
+\subsection{Validating maxent}
+The hope of maxent is that by fixing some aspects of the probability distribution, we can forget about the rest. In this sense, maxent is not a typical fitting method where the optimal parameters are sought such that the model is as good as possible. Instead, we specify which aspects of the system we think are important and the resulting ``parameters'' come from the maximum entropy principle.
+
+Thus, one way to test the model is to consider how well we do in predicting the rest of the distribution. If the rest of the distribution is not well fit, certainly we must go back and reconsider which constraints to impose. On the other hand, finding that the rest of the probability distribution is fit is all good and well, but it does not necessarily mean we have found the right model [cite much discussion here].
+
+\section{Criticality in biological systems}
+
+\section{Why not maximum entropy?}
 
 \section{Notes on Monte Carlo Markov Chain sampling}
 The key points behind MCMC sampling is ergodicity and detailed balance. Ergodicity just means that we can get from one state to another in a finite number of steps, and this ensures that we don't get stuck in a few states. Detailed balance is a sufficient but not necessary condition (stronger than needed) for ensuring that the equilibrium distribution matches the distribution that we seek. There are some specialized algorithms that don't satisfy detailed balance but do produce the desired distribution.
