Reorg and some fixes.

--- a/guide.tex
+++ b/guide.tex
@@ -164,6 +164,8 @@ MCH is implemented in the MCH class.
 \section{Pseudolikelihood}
 
 \section{Minimum Probability Flow}
+A local approximation to the Kullback-Leibler divergence at each time step...
+\cite{SohlDickstein:2011im}
 
 \section{Cluster expansions}
 
