--- a/guide.tex
+++ b/guide.tex
@@ -48,44 +48,13 @@ CONIII (Convenient Interface to Inverse Ising) is a Python project intended to p
 
 We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
 
-\section{What is entropy?}
-The conventional textbook in statistical mechanics first introduces the concept of entropy as a way of counting the phase volume available to the system at a given energy
-\begin{align}
-	S(E) &= k_B \log\Omega(E)
-\end{align}
-where $k_B$ is Boltzmann's constant and $\Omega$ the number of states between $E$ and $E+\delta E$. Temperature is defined as
-\begin{align}
-	\frac{1}{T} &= \frac{\partial S}{\partial E}
-\end{align}
-
- begins with the concept of a small system coupled to a heat bath. In this limit, we can linearly expand thermodynamic quantities about the energy of the bath $E_{\rm bath} = E-E_s$
-\begin{align}
-	S_{\rm bath}(E-E_s) &\approx S_{\rm bath}(E) -E_s\left.\frac{\partial S}{\partial E_s}\right|_{E-E_s}\\
-		&= S_{\rm bath}(E) -\frac{E_s}{T}\\
-	e^{S_{\rm bath}(E-E_s)/k_B} &= e^{S_{\rm bath}(E)/k_B} e^{-E_s/k_BT}
-\intertext{Since the entropy is proportional to the density of states at a particular energy $E_s$, Eq ?? corresponds to}
-	p(E_s) &= e^{-E_s/k_BT}/Z
-\end{align}
-With partition function $Z$. In other words, the Gibbs measure takes exponential form. Eq ?? can be rewritten in terms of free energy
-\begin{align}
-	\log p(E_s) &= -E_s/k_BT -\log(Z)
-\intertext{Averaging both sides over all energy configurations and rearranging}
-	-k_B T\log Z &= \sum_s p(E_s) E_s +k_BT\sum_s p(E_s)\log p(E_s)
-\intertext{Remembering the fundamental postulate of statistical mechanics that all states are equally likely}
-	-k_BT\log Z &= \br{E_s} - TS\\
-	F &= \br{E_s} -TS
-\end{align}
-This equation tells us how the Helmholtz free energy is related to the internal energy and the entropy of the system.
-
-When we say that free energy is minimized for a system with Hamiltonian $E_s$ at equilibrium, we are equivalently saying that entropy is maximized. Entropy maximization is the crux of statistical physics models.
-%A more colloquial way of stating this is that statistical mechanics models produce a distribution that is as ``spread out'' as possible given a particular form to the energy function and a temperature.
-
 \section{What is maximum entropy?}
-Shannon introduced the concept of information entropy in his seminal paper about communication...as the unique measure of uncertainty that a followed from a three basic postulates. The resulting measure of information entropy over a distribution of states is
+Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel. Information entropy is the unique measure of uncertainty that a followed from a three basic postulates. According to Shannon, information entropy, hereon just ``entropy'', over the probability distribution of possible configurations $s$ of a model is
 \begin{align}
-	S[p] &= -\sum_s p_s \log p_s
+	S[p] &= -\sum_{s\in \mathcal{S}} p_s \log p_s
 \end{align}
-which reduces to the thermodynamic entropy from Eq ?? when we take the axiom that all microstates be equally probable.
+
+Given the set of configurations $\mathcal{S}$, entropy is maximized when the probability distribution is uniform $p_s = p_{s'}$. The maximum entropy distribution is maximally unstructured in that there is no structure in the distribution to exploit to guess what is more likely to be observed, i.e. each sample from the probability distribution is maximally surprising. [Is this the way we want to introduce things? Maybe we really just want to say...]
 
 The idea behind maximum entropy, or maxent, is to build a model that is consistent with the data but otherwise as structureless as possible \cite{Bretthorst:2003ua}.
 Since entropy is a measure of uncertainty, we can build a contrained maximization problem. With $K$ constraints indexed by $k$, $\sum_i p_i f_k(\sigma_i)$ can be solved by the method of Langrangian multipliers
@@ -93,14 +62,17 @@ Since entropy is a measure of uncertainty, we can build a contrained maximizatio
 	\mathcal{L}[p] &= -\sum_i p_i\log p_i - \sum_k \lambda_k \sum_i p_i f_k(\sigma_i)\\
 	F &= S - \br{E}
 \end{align}
-The notation draw out the equivalence between maximizing entropy and minimizing the Helmholtz free energy of system. By specifying the constraints on the maximization, we fix the form of the Hamiltonian. This formulation makes clear the fundamental connection that we can think of statistical mechanics as an inference procedure using a maximum entropy principle \cite{Jaynes:1957fy}.
+The notation draw out the equivalence between maximizing entropy and minimizing the Helmholtz free energy of system (See Appendix). By specifying the constraints on the maximization, we fix the form of the Hamiltonian. This formulation makes clear the fundamental connection that we can think of statistical mechanics as an inference procedure using a maximum entropy principle \cite{Jaynes:1957fy}.
 
 The resulting model is a Boltzmann distribution over states
 \begin{align}
 	p(\sigma) &= \left.e^{-E(\sigma)}\right/Z\\
 	Z &= \sum_\sigma e^{-E(\sigma)}
 \end{align}
-otherwise known as the exponential family of models in statistical literature.
+otherwise known as the exponential family of models in statistical literature. If we fix the average energy of the system, we get the microcanonical ensemble (See Appendix). which is equivalent to the axiom that all microstates have equal probability (that is the maxent distribution).
+
+\subsection{Ising model}
+Let's take a concrete example. Imagine that you have a system with $n$ components that have been sampled many times. To be more specific, we'll take $n=9$ voters on the US Supreme Court that either vote with in the majority, the winning coalition, or in the minority. [More generally, we could think some like gene expression levels in a cell a coarse-grained representation where relatively high or low expression can be represented by a binary variable. Of course, we don't have to restrict ourselves to binary variables \cite{Lezon:2006ws}.]
 
 A well known example is that of the Ising model with binary spins $\sigma_{\rm i} \in {-1,1}$ with Hamiltonian 
 \begin{align}
@@ -112,13 +84,13 @@ with couplings $J_{\rm ij}$ between neighbors and external fields specific to ea
 	\br{\si\sj}_{\rm obs} &= \br{\si\sj}
 \end{align}
 
-Enforcing the constraints is equivalent to minimizing the Kullback-Leibler divergence between the model and the data
+Enforcing the constraints is equivalent to minimizing the Kullback-Leibler divergence between the model and the data \cite{Cover:2006tl}
 \begin{align}
-	D_{KL}(p||q) &= \sum p_k \log\left(\frac{p_k}{q_k}\right)\\
-	\frac{\partial D}{\partial \lambda_k} &= p_k \frac{\partial (-E-Z)}{\partial \lambda_k}\\
-	0 &= \br{f_k}_{\rm obs} -\br{f_k}
+	D_{KL}(p_{\rm data}||p_{\rm ME}) &= \sum_s p_{\rm data} \log\left(\frac{p_{\rm data}}{p_{\rm ME}}\right)\\
+	\frac{\partial D}{\partial \lambda_k} &= \sum_s p_{\rm data} \frac{\partial (-E-\log Z)}{\partial \lambda_k}\\
+	0 &= \br{f_k}_{\rm data} -\br{f_k}_{\rm ME}
 \end{align}
-[Of course, we also have to show that the problem is convex.]
+[Of course, we also have to show that the problem is convex.] In other words, the parameters of the maximum entropy model are the ones that minimize the ``distance'' to the distribution of the data.
 
 When the $K$ nonliear equations are coupled, this becomes quite hard to solve analytically. However, we have numerical methods at our disposal.
 
@@ -182,7 +154,41 @@ Thus, one way to test the model is to consider how well we do in predicting the 
 
 \section{Why not maximum entropy?}
 
+
+
 \appendix
+
+\section{The microcanonical ensemble and maximum entropy}
+The conventional textbook in statistical mechanics first introduces the concept of entropy as a way of counting the phase volume available to the system at a given energy
+\begin{align}
+	S(E) &= k_B \log\Omega(E)
+\end{align}
+where $k_B$ is Boltzmann's constant and $\Omega$ the number of states between $E$ and $E+\delta E$. Temperature is defined as
+\begin{align}
+	\frac{1}{T} &= \frac{\partial S}{\partial E}
+\end{align}
+
+ begins with the concept of a small system coupled to a heat bath. In this limit, we can linearly expand thermodynamic quantities about the energy of the bath $E_{\rm bath} = E-E_s$
+\begin{align}
+	S_{\rm bath}(E-E_s) &\approx S_{\rm bath}(E) -E_s\left.\frac{\partial S}{\partial E_s}\right|_{E-E_s}\\
+		&= S_{\rm bath}(E) -\frac{E_s}{T}\\
+	e^{S_{\rm bath}(E-E_s)/k_B} &= e^{S_{\rm bath}(E)/k_B} e^{-E_s/k_BT}
+\intertext{Since the entropy is proportional to the density of states at a particular energy $E_s$, Eq ?? corresponds to}
+	p(E_s) &= e^{-E_s/k_BT}/Z
+\end{align}
+With partition function $Z$. In other words, the Gibbs measure takes exponential form. Eq ?? can be rewritten in terms of free energy
+\begin{align}
+	\log p(E_s) &= -E_s/k_BT -\log(Z)
+\intertext{Averaging both sides over all energy configurations and rearranging}
+	-k_B T\log Z &= \sum_s p(E_s) E_s +k_BT\sum_s p(E_s)\log p(E_s)
+\intertext{Remembering the fundamental postulate of statistical mechanics that all states are equally likely}
+	-k_BT\log Z &= \br{E_s} - TS\\
+	F &= \br{E_s} -TS
+\end{align}
+This equation tells us how the Helmholtz free energy is related to the internal energy and the entropy of the system.
+
+When we say that free energy is minimized for a system with Hamiltonian $E_s$ at equilibrium, we are equivalently saying that entropy is maximized. Entropy maximization is the crux of statistical physics models.
+%A more colloquial way of stating this is that statistical mechanics models produce a distribution that is as ``spread out'' as possible given a particular form to the energy function and a temperature.
 
 \section{Notes on Monte Carlo Markov Chain sampling}
 The key points behind MCMC sampling is ergodicity and detailed balance. Ergodicity just means that we can get from one state to another in a finite number of steps, and this ensures that we don't get stuck in a few states. Detailed balance is a sufficient but not necessary condition (stronger than needed) for ensuring that the equilibrium distribution matches the distribution that we seek. There are some specialized algorithms that don't satisfy detailed balance but do produce the desired distribution.
