Update to notebook

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# Inverse Ising problem\n",
     "\n",
-    "This notebook gives examples of how to use the various solvers included in CONIII for solving the inverse Ising problem. In this problem, the goal is to match the average of each spin (the magnetization) $\\{\\langle\\sigma_{\\rm i}\\rangle\\}$ and the pairwise correlations $\\{\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle\\}$ by finding the fields $\\{h_{\\rm i}\\}$ and couplings $\\{J_{\\rm ij}\\}$."
+    "This notebook gives examples of how to use the various solvers included in CONIII for solving the inverse Ising problem. In this problem, the goal is to match the average of each spin (the magnetization) $\\{\\langle\\sigma_{\\rm i}\\rangle\\}$ and the pairwise correlations $\\{\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle\\}$ by finding the fields $\\{h_{\\rm i}\\}$ and couplings $\\{J_{\\rm ij}\\}$.\n",
+    "\n",
+    "The Ising model is given by  \n",
+    "$p(\\{\\sigma_{\\rm i}\\}) = \\left.e^{-E(\\{\\sigma_{\\rm i}\\})}\\right/Z$  \n",
+    "$\\displaystyle E(\\{\\sigma_{\\rm i}\\}) = -\\sum_{\\rm ij}J_{\\rm ij}\\sigma_{\\rm i}\\sigma_{\\rm j} -\\sum_{\\rm i}^Nh_{\\rm i}$  \n",
+    "$Z = \\displaystyle \\sum_{\\{\\sigma_{\\rm i}\\}} e^{-E(\\{\\sigma_{\\rm i}\\})}$"
    ]
   },
   {
@@ -75,7 +80,7 @@
     "Enumerate all constraint equations and solve them using scipy.optimize.minimize. All the equations have been written to the file \"ising_eqn_5_sym.py\" by calling\n",
     ">python exact.py 5 1\n",
     "\n",
-    "In this case, the exact (not sampled) $\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle$ are given and the exact solution is found."
+    "In this case, the exact (not sampled) $\\langle\\sigma_{\\rm i}\\rangle$ and $\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle$ are given and the exact solution is found."
    ]
   },
   {
@@ -86,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "# Define function specifically needed for running Exact class.\n",
+    "# Define function specifically needed for creating Exact class.\n",
     "def calc_observables_multipliers(J):\n",
     "    \"\"\"\n",
     "    Calculate observables from probability distribution given Langrangian multipliers.\n",
